Pmd codestyle fixes (#183)
* formatting

* implementing some best practices

* codestyle fixes

* more codestyle fixes

* fixing tests after introducing codestyle and format